fix scrollbar bug

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,4 @@
 html {
-    overflow-x: hidden;
-    overflow-y: auto;
     background: #ebf0f0;
 }
 /* 清除内外边距 */
@@ -809,17 +807,28 @@ article .entry-content-archive .date{
 
 .search-opacity{
     position: fixed;
-    left: 0;
     top: 0;
-    width: 100%;
-    zoom: 1;
-    background: #2f2e2e;
-    z-index: 999;
-    width:100%;
-    height:100%;
-    filter:alpha(opacity=50); /*IE滤镜，透明度50%*/
-    -moz-opacity:0.5; /*Firefox私有，透明度50%*/
-    opacity:0.5;/*其他，透明度50%*/
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(55,55,55,.6);
+    height: 100%;
+    z-index: 1000;
+    margin: 0;
+    padding: 0;
+}
+
+.search-modal-wrap{
+    position: fixed;
+    overflow: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    outline: 0;
+    margin: 0;
+    padding: 0;
 }
 
 
